# Gosol

./: .env.example  .env.test  .gitignore  Dockerfile  Makefile  README.md  docker-compose.monitoring.yml  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.test.yml  docker-compose.yml  go.mod  go.sum  go.work.sum  jest.config.js  main.go  ollama.Dockerfile  package-lock.json  package.json  prometheus.yml  todo.md
archive/: go.mod  go.work.sum
backend/: .env.example  Dockerfile  README.md  go.mod  go.sum  main.go
docs/: configuration.md  llm.md  monitoring.md
frontend/: .env.example  Dockerfile  index.html  jest.config.js  jest.config.ts  jest.setup.ts  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
grafana-dashboards/: main.json  (+2 more)
ml-service/: .env.example  Dockerfile  agent_system.py  backtest_engine.py  backtest_system.py  config.py  deepseek_client.py  main.py  market_analyzer.py  market_data_service.py  ml_agent.py  models.py  monitor.py  ollama_client.py  performance_monitor.py  pyproject.toml  reporting_system.py  requirements.txt  risk_management.py  run.sh  strategy_engine.py  technical_analysis.py  test_ollama.py  test_service_communication.py  trade_executor.py  trading_system.py  web_interface.py
ml-service/database/: __init__.py  health.py  market_data.db  risk_management.db
ml-service/exchanges/: dydx_client.py  hyperliquid_client.py
ml-service/ml_service/tests/: test_main.py  test_ollama.py  test_service_communication.py
ml-service/tests/: test_main.py  test_service_communication.py
(+421 files in other folders)
