[tool.poetry]
name = "gosol-ml-service"
version = "0.1.0"
description = "ML Service for GoSol Trading System"
authors = ["GoSol Team"]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.24.0"
pandas = "^2.0.0"
scikit-learn = "^1.3.0"
scipy = "^1.10.0"
websockets = "^11.0.0"
aiohttp = "^3.8.0"
python-dotenv = "^1.0.0"
pydantic = "^2.0.0"
loguru = "^0.7.0"
streaming-indicators = "^0.1.7"
pandas-ta = "0.3.14b0"
fastapi = "^0.104.0"
uvicorn = "^0.24.0"
psutil = "^5.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
